fix(apk): support remote client on Android 10+